# minkipc

./: README.md
.github/actions/loading/: action.yml
.github/workflows/: pre_merge.yml  qcom-preflight-checks.yml  sync_build.yml
libminkadaptor/: CMakeLists.txt
libminkadaptor/src/: supplicant.c  syscall.S  syscall32.S
libminkadaptor/tests/smcinvoke_client/: CMakeLists.txt
libminkadaptor/tests/smcinvoke_client/src/: smcinvoke_client.cpp
listeners/librpmbservice/: CMakeLists.txt  rpmb.c  rpmb.h  rpmb_emmc.c  rpmb_logging.c  rpmb_logging.h  rpmb_private.h  rpmb_service.c  rpmb_service.h  rpmb_ufs.c  rpmb_ufs.h
rpmb_client/: CMakeLists.txt  rpmb_client.c
ta/kaanapali/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/mahua/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/qcm2290/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/sm8750/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/x1e80100/: tzecotestapp.mbn
ta/x1p42100/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn
