project(rpmb_client C)

# ---------------------------------------------------------------------------
# IDL header generation
#
# The mink IDL compiler (idlc) generates two headers per IDL file:
#   <Name>.h        — interface header (method stubs, error codes)
#   <Name>_invoke.h — skeleton header (server-side dispatch, not needed here)
#
# Headers are written into the source tree so that #include "IRPMBService.h"
# and #include "CRPMBService.h" resolve from the idl/ subdirectory.
# ---------------------------------------------------------------------------

set(RPMB_IDLS
	idl/IRPMBService
	idl/CRPMBService
)

set(IDL_OUT_LIST "")

foreach(IDL ${RPMB_IDLS})
	set(IDL_OUT   ${CMAKE_CURRENT_SOURCE_DIR}/${IDL}.h)
	set(IDL_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/${IDL}.idl)

	add_custom_command(
		OUTPUT  ${IDL_OUT}
		DEPENDS ${IDL_INPUT}
		COMMAND ${MINKIDLC_BIN_DIR}/idlc ${IDL_INPUT} -o ${IDL_OUT}
		COMMENT "Generating IDL header: ${IDL_OUT}"
	)

	list(APPEND IDL_OUT_LIST ${IDL_OUT})
endforeach()

add_custom_target(
	${PROJECT_NAME}_MINKHEADERS ALL
	DEPENDS ${IDL_OUT_LIST}
)

# ---------------------------------------------------------------------------
# Executable
# ---------------------------------------------------------------------------

add_executable(${PROJECT_NAME}
	rpmb_client.c
)

add_dependencies(${PROJECT_NAME}
	${PROJECT_NAME}_MINKHEADERS
	listenercbo_MINKHEADERS
)

# ---------------------------------------------------------------------------
# Include paths
#
#   1. rpmb_client/idl/       — IRPMBService.h, CRPMBService.h (generated)
#   2. listenercbo/idl/       — IClientEnv.h (generated by listenercbo target)
#   3. libminkadaptor/include/ — object.h, MinkCom.h
# ---------------------------------------------------------------------------

target_include_directories(${PROJECT_NAME}
	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/idl
	PRIVATE ${CMAKE_SOURCE_DIR}/listeners/listenercbo/idl
	PRIVATE ${CMAKE_SOURCE_DIR}/libminkadaptor/include
)

# ---------------------------------------------------------------------------
# Link libraries
# ---------------------------------------------------------------------------

target_link_libraries(${PROJECT_NAME}
	PRIVATE minkadaptor
)

# ---------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------

install(TARGETS ${PROJECT_NAME}
	DESTINATION "${CMAKE_INSTALL_BINDIR}"
)
